[package]
name = "fibonacci_zk_tlsn"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo = { git = "https://github.com/starkware-libs/stwo", branch = "dev", features = [
    "prover",
] }
stwo-constraint-framework = { git = "https://github.com/starkware-libs/stwo", branch = "dev", features = [
    "prover",
    "std",
] }
itertools = "0.13"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spansy = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "6168663"}
tokio-rustls = "0.26.2"


tlsn-attestation = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.13", version = "0.1.0-alpha.13" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.13", version = "0.1.0-alpha.13" }
tlsn = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.13", version = "0.1.0-alpha.13" }
tlsn-server-fixture = { git = "https://github.com/tlsnotary/tlsn/", version = "0.0.0 "}
tlsn-server-fixture-certs = { git = "https://github.com/tlsnotary/tlsn/", version = "0.0.0" }
tls-core = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.13", version = "0.1.0-alpha.13", package = "tlsn-tls-core" }

bincode = "1.3"
chrono = "0.4"
futures = "0.3"
http-body-util = "0.1"
hex = "0.4"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }

tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-std",
  "fs",
] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = "0.3"